--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tom Hall</title>
 </head>
+
 <body>
-    
+
+    <div class="nav-wrapper">
+        <nav class="nav">Nav section</nav>
+    </div>
+
+    <section class="section1">
+        <p>hero, pic, intro</p>
+    </section>
+
+    <section class="section2">
+        <p>tech/frameworks/tools I've used</p>
+        <div class="tech-wrapper">
+            <div class="tech">JavaScript</div>
+        </div>
+    </section>
+
+    <section class="section3">
+        <p>projects</p>
+    </section>
+
+    <section class="section4">
+        <p>contact</p>
+    </section>
+
 </body>
+
 </html>
